dataset1235/2025-2/2868285114/users/3212226731/executions/3071719669_1914301514.log
== SUBMISSION (2025-08-28 22:15:27)
-- CODE: 
consumo = float(input())
valor1 = 0.28*consumo + 23.00
vt = consumo + consumo*(31/100)
print (round(vt,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
180.29
---- correct output:
96.26
---- user output:
236.18
-- TEST CASE 2:
---- input:
100.0
---- correct output:
66.81
---- user output:
131.0
-- TEST CASE 3:
---- input:
113.86
---- correct output:
71.89
---- user output:
149.16
-- TEST CASE 4:
---- input:
221.31
---- correct output:
111.31
---- user output:
289.92
-- TEST CASE 5:
---- input:
165.7
---- correct output:
90.91
---- user output:
217.07
-- TEST CASE 6:
---- input:
72.51
---- correct output:
56.73
---- user output:
94.99
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:18:28)
-- CODE: 
consumo = float(input())
valor1 = 0.28*consumo + 23.00
vt = valor1*(31/100) + valor1
print (round(valor1,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
180.29
---- correct output:
96.26
---- user output:
73.48
-- TEST CASE 2:
---- input:
100.0
---- correct output:
66.81
---- user output:
51.0
-- TEST CASE 3:
---- input:
113.86
---- correct output:
71.89
---- user output:
54.88
-- TEST CASE 4:
---- input:
221.31
---- correct output:
111.31
---- user output:
84.97
-- TEST CASE 5:
---- input:
165.7
---- correct output:
90.91
---- user output:
69.4
-- TEST CASE 6:
---- input:
72.51
---- correct output:
56.73
---- user output:
43.3
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:14:59)
-- CODE: 
consumo = float(input())
valor1 = 0.28*consumo + 23.00
vt = consumo + cosumo*(31/100)
print (round(vt,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
180.29
---- correct output:
96.26
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    vt = consumo + cosumo*(31/100)
                   ^^^^^^
NameError: name 'cosumo' is not defined. Did you mean: 'consumo'?
-- TEST CASE 2:
---- input:
100.0
---- correct output:
66.81
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    vt = consumo + cosumo*(31/100)
                   ^^^^^^
NameError: name 'cosumo' is not defined. Did you mean: 'consumo'?
-- TEST CASE 3:
---- input:
113.86
---- correct output:
71.89
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    vt = consumo + cosumo*(31/100)
                   ^^^^^^
NameError: name 'cosumo' is not defined. Did you mean: 'consumo'?
-- TEST CASE 4:
---- input:
221.31
---- correct output:
111.31
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    vt = consumo + cosumo*(31/100)
                   ^^^^^^
NameError: name 'cosumo' is not defined. Did you mean: 'consumo'?
-- TEST CASE 5:
---- input:
165.7
---- correct output:
90.91
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    vt = consumo + cosumo*(31/100)
                   ^^^^^^
NameError: name 'cosumo' is not defined. Did you mean: 'consumo'?
-- TEST CASE 6:
---- input:
72.51
---- correct output:
56.73
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    vt = consumo + cosumo*(31/100)
                   ^^^^^^
NameError: name 'cosumo' is not defined. Did you mean: 'consumo'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:16:44)
-- CODE: 
consumo = float(input())
valor1 = 0.28*consumo + 23.00
vt = consumo + consumo*(31/100)
print (round(vt,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
180.29
---- correct output:
96.26
---- user output:
236.18
-- TEST CASE 2:
---- input:
100.0
---- correct output:
66.81
---- user output:
131.0
-- TEST CASE 3:
---- input:
113.86
---- correct output:
71.89
---- user output:
149.16
-- TEST CASE 4:
---- input:
221.31
---- correct output:
111.31
---- user output:
289.92
-- TEST CASE 5:
---- input:
165.7
---- correct output:
90.91
---- user output:
217.07
-- TEST CASE 6:
---- input:
72.51
---- correct output:
56.73
---- user output:
94.99
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:18:36)
-- CODE: 
consumo = float(input())
valor1 = 0.28*consumo + 23.00
vt = valor1*(31/100) + valor1
print (round(vt,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
180.29
---- correct output:
96.26
---- user output:
96.26
-- TEST CASE 2:
---- input:
100.0
---- correct output:
66.81
---- user output:
66.81
-- TEST CASE 3:
---- input:
113.86
---- correct output:
71.89
---- user output:
71.89
-- TEST CASE 4:
---- input:
221.31
---- correct output:
111.31
---- user output:
111.31
-- TEST CASE 5:
---- input:
165.7
---- correct output:
90.91
---- user output:
90.91
-- TEST CASE 6:
---- input:
72.51
---- correct output:
56.73
---- user output:
56.73
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:14:38)
-- CODE: 
consumo = float(input())
valor1 = 0.28*consumo + 23.00
vt = consumo + cosumo*(31/100)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
180.29
---- correct output:
96.26
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    vt = consumo + cosumo*(31/100)
                   ^^^^^^
NameError: name 'cosumo' is not defined. Did you mean: 'consumo'?
-- TEST CASE 2:
---- input:
100.0
---- correct output:
66.81
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    vt = consumo + cosumo*(31/100)
                   ^^^^^^
NameError: name 'cosumo' is not defined. Did you mean: 'consumo'?
-- TEST CASE 3:
---- input:
113.86
---- correct output:
71.89
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    vt = consumo + cosumo*(31/100)
                   ^^^^^^
NameError: name 'cosumo' is not defined. Did you mean: 'consumo'?
-- TEST CASE 4:
---- input:
221.31
---- correct output:
111.31
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    vt = consumo + cosumo*(31/100)
                   ^^^^^^
NameError: name 'cosumo' is not defined. Did you mean: 'consumo'?
-- TEST CASE 5:
---- input:
165.7
---- correct output:
90.91
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    vt = consumo + cosumo*(31/100)
                   ^^^^^^
NameError: name 'cosumo' is not defined. Did you mean: 'consumo'?
-- TEST CASE 6:
---- input:
72.51
---- correct output:
56.73
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    vt = consumo + cosumo*(31/100)
                   ^^^^^^
NameError: name 'cosumo' is not defined. Did you mean: 'consumo'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:14:57)
-- CODE: 
consumo = float(input())
valor1 = 0.28*consumo + 23.00
vt = consumo + cosumo*(31/100)
print (round(vt,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
180.29
---- correct output:
96.26
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    vt = consumo + cosumo*(31/100)
                   ^^^^^^
NameError: name 'cosumo' is not defined. Did you mean: 'consumo'?
-- TEST CASE 2:
---- input:
100.0
---- correct output:
66.81
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    vt = consumo + cosumo*(31/100)
                   ^^^^^^
NameError: name 'cosumo' is not defined. Did you mean: 'consumo'?
-- TEST CASE 3:
---- input:
113.86
---- correct output:
71.89
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    vt = consumo + cosumo*(31/100)
                   ^^^^^^
NameError: name 'cosumo' is not defined. Did you mean: 'consumo'?
-- TEST CASE 4:
---- input:
221.31
---- correct output:
111.31
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    vt = consumo + cosumo*(31/100)
                   ^^^^^^
NameError: name 'cosumo' is not defined. Did you mean: 'consumo'?
-- TEST CASE 5:
---- input:
165.7
---- correct output:
90.91
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    vt = consumo + cosumo*(31/100)
                   ^^^^^^
NameError: name 'cosumo' is not defined. Did you mean: 'consumo'?
-- TEST CASE 6:
---- input:
72.51
---- correct output:
56.73
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    vt = consumo + cosumo*(31/100)
                   ^^^^^^
NameError: name 'cosumo' is not defined. Did you mean: 'consumo'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
